@@ -2,9 +2,10 @@ FROM eclipse-temurin:8u412-b08-jre-jammy
 LABEL title="alist-strm"
 LABEL description="将alist的视频文件生成媒体播放设备可播放的strm文件"
 LABEL authors="JackDing"
-COPY ./target/application.jar /aliststrm.jar
-VOLUME /data
-VOLUME /log
+RUN apt-get update && apt-get install -y gosu && rm -rf /var/lib/apt/lists/*
+WORKDIR /app
+COPY ./target/application.jar /app/aliststrm.jar
+COPY --chmod=755 entrypoint.sh /entrypoint.sh
 ENV TZ=Asia/Shanghai
 ENV alistServerUrl=""
 ENV alistServerToken=""
@@ -24,4 +25,9 @@ ENV logLevel=""
 ENV maxIdleConnections="5"
 ENV refresh="1"
 ENV scheduledCron="0 0 6,18 * * ?"
-ENTRYPOINT ["sh","-c","java -jar $JAVA_OPTS -XX:+UseG1GC -XX:+OptimizeStringConcat -XX:+PrintGCDetails -Xloggc:/log/gc.log -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/log /aliststrm.jar"]
+ENV PUID=0
+ENV PGID=0
+ENV UMASK=022
+ENTRYPOINT [ "/entrypoint.sh" ]
+VOLUME /data
+VOLUME /log
